# buildsys

./: README.gmi  README.md  buildsys.mk  buildsys.mk.in  configure.ac
build-aux/m4/: buildsys.m4
m4/: buildsys.m4  sharedlib.m4
